Bug 66478 - FORMATTING: Hyphenation is not working
Summary: FORMATTING: Hyphenation is not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: x86 (IA32) Windows (All)
: high major
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: target:4.2.0 target:4.1.0
Keywords: regression
: 66954 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-07-02 00:04 UTC by Claude
Modified: 2013-07-18 17:06 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Zip file (124.50 KB, application/x-zip-compressed)
2013-07-02 00:10 UTC, Claude
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Claude 2013-07-02 00:04:21 UTC
In version 4.1.0.1 hyphenation is not working.  Steps to reproduce:

1.  Create writer document
2.  Insert text (at least one paragraph long)
3.  Set paragraph style, TextFlow tab, check Hyphenation (2 characters at line end; 2 characters at line begin; 0 maximum number of consecutive hyphens)
4.  OK

The hyphenation does not produce breaking lines with hyphens set at the syllabic breaking points.

Three documents attached to illustrate:

1.  Portable LibreOffice 4.0.4 Windows XP document.  The feature works as expected.  (pdf rendering)

2.  LibreOffice 4.1.0.1 Windows XP document.  Feaature does not work on the same document. (pdf rendering)

3.  Sample document from which de pfs were created  (Wikipedia home page text)

4. Figure showing Tools | Options | Language Settins | Writing Aids dialog box
(Check special regions box; characters before line break


This has been tested on the English Language set up working on English Windows XP.  The same has been proven on a Spanish Language setup on Spanish Windows 7.

I believe (I do not know enough about) that it has to do with the option 'characters before line break' in Writing Aids dialog box that is 0 hardcoded and does not accept editing.  You can set any number greater than 2, but when pressing OK the change reverts automatically back to 0, as shown when the Dialog Box is called back.
Comment 1 Claude 2013-07-02 00:10:47 UTC
Created attachment 81838 [details]
Zip file

Sorry, the attachment dind´t went through the first time
Comment 2 Jacques Guilleron 2013-07-03 15:46:44 UTC
Hi Claude,

I confirm hyphenation is not working in LO 4.1.0.1 & Windows 7 Home Premium and worked with LO 4.0.4.1, same conditions as you.

Regards,

Jacques
Comment 3 gerdl 2013-07-06 16:10:17 UTC
also in 4.1.0.2.0 german hyphenation is not working.
even after german.de-frama wad loaded.
regards
Comment 4 manj_k 2013-07-06 19:44:14 UTC
Tested and confirmed (on WinXP 32b) with:

Version 4.1.0.2.0
Build ID: 103a942746cfe346e87daab62acbd4268c38097

Version 4.1.1.0.0+
Build ID: 03c0f9976dc1c77973658aa02db2823bfc9a09a
TinderBox: Win-x86_9-Voreppe, Branch:libreoffice-4-1, Time: 2013-07-05_09:14:47

Version 4.2.0.0.alpha0+
Build ID: 8624906bc437b242ea0df17801bc77d0f273f32c
TinderBox: Win-x86@6, Branch:master, Time: 2013-07-05_04:07:10.

Tested languages: English (USA), French (France), German (Germany).
Comment 5 Commit Notification 2013-07-07 16:23:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6fa07d2d608646004bc45261275c4ebabb578a09

fdo#66478: sw: un-break hyphenation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Meeks 2013-07-08 08:55:22 UTC
Thanks for the fix Michael ! :-)
Comment 7 Commit Notification 2013-07-08 09:04:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d268e8302d13b81494305eab68e60ab6d0ef264&h=libreoffice-4-1

fdo#66478: sw: un-break hyphenation


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl (allotropia) 2013-07-08 10:26:40 UTC
was a regression from string conversion a2f6402b1fe769a430019042e14e63c9414715dc
Comment 9 Commit Notification 2013-07-09 08:35:31 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa690363c51c43a281b06953627d335c31a0111d&h=libreoffice-4-1-0

fdo#66478: sw: un-break hyphenation


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 manj_k 2013-07-16 19:41:58 UTC
*** Bug 66954 has been marked as a duplicate of this bug. ***
Comment 11 manj_k 2013-07-16 19:55:09 UTC
Thanks, verified (on WinXP 32b) with
Version: 4.2.0.0.alpha0+
Build ID: 6a9aa432f53b53310ce56588508d151e15112b16
tinderbox Win-x86@6 · tree: MASTER · pull time 2013-07-10 00:32:34.

Tested languages: English (USA), French (France), German (Germany).
Comment 12 manj_k 2013-07-18 17:06:54 UTC
Verified (on WinXP 32b) with
LibreOffice 4.1.0.3
Build ID: 719826cd009b9a1fa43e253db0616288c682826.

Tested languages: English (USA), French (France), German (Germany).