fdo#66478: sw: un-break hyphenation

The main problem is calling SetHyphPos with a stack pointer.
Converting STRING_LEN <-> -1 can't hurt though.

(regression from a2f6402b1fe769a430019042e14e63c9414715dc)

Change-Id: I59a4e3b16b418082de468c7d7f7f38a9b0bccd01